--- a/index/index.html
+++ b/index/index.html
@@ -8,6 +8,13 @@
         <div>
             <canvas id="canvas" width="400" height="400"> </canvas>
         </div>
+            <form action ="/" method = "post">
+                <p>この観光名所はなに？（ひらがな6文字）：<br>
+                <input type="text" name="answer"></p>
+            </form>
+        <div>
+
+        </div>
 
         <script src="script.jsx"></script>
     </body>
