--- a/index/index.html
+++ b/index/index.html
@@ -6,15 +6,19 @@
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
     </head>
     <body>
+        <div id="title">
+            <img src="./images/block25_logo.png" alt="ブロック25" />
+        </div>
+        <div class ="background">
         <div class="container">
-            <div class="title">
-                <h1>ブロック25</h1>
+            <div class="canvas">
+                <canvas id="canvas" width="400" height="400"></canvas>
             </div>
             <div class="explanation">
                 <h2>ルール説明</h2>
                 <p>キーボードの左右キー（←／→）で板を左右に動かします</p>
                 <p>スペースキーで一時停止できます</p>
-                <p>正解した時に残っていたパネルの枚数が得点になります</p>
+                <p>正解したときに残っていたパネルの枚数が得点になります</p>
             </div>
             <div>
                 <canvas id="canvas" width="400" height="400"> </canvas>
@@ -30,6 +34,8 @@
             </div>
             <div id = "quizResult">    
             </div>
+
+        </div>
         </div>
         <script src="script.jsx"></script>
     </body>
